# passgen-api

./: .gitignore  NOTES.md  meson.build
arctix/: Cargo.toml
conf/: build.conf  passgen-api.conf
gotham-server/: Cargo.toml
gotham-server/src/: main.rs
hyper-web-api/: Cargo.toml
kore-api/: .gitignore
kore-api/conf/: build.conf  kore-api.conf
kore-api/src/: kore-api.c
passgen-api/: Cargo.toml  Rocket.toml
src/: Makefile  api_server.c  api_server.db  multithreaded.c  passgen.c  version.c
