[package]
name = "hyper-web-api"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.33"
futures = "0.1.28"
futures-util = "0.2.1"
tokio = "0.1.22"
